crates/domain/tests/violations/domain_imports_figment.stderr
error[E0432]: unresolved import `figment`
 --> tests/violations/domain_imports_figment.rs:5:5
  |
5 | use figment::Figment;
  |     ^^^^^^^ use of unresolved module or unlinked crate `figment`
  |
  = help: if you wanted to use a crate named `figment`, use `cargo add figment` to add it to your `Cargo.toml`
